<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Generalscan Broadcast Service</string>
    <string name="bluetooth">Bluetooth Scanner Sample</string>
    <string name="usb">USB Accessory Sample</string>
    <string name="tts">TTS Sample</string>
    <string name="usbService">USB Accessory Service Sample</string>
    <string name="edit">Version:</string>
    <!-- 列表 -->
    <string name="Function">Hardware Function</string>
    <string name="Config">Barcode Setting</string>
    <string name="Read">Read Accessory Information</string>
    <!-- 蓝牙 -->
    <string name="B_Open">Open the Bluetooth and pairing</string>
    <string name="B_Select">Select device</string>
    <string name="B_Connect">Connect</string>
    <string name="B_Close">Disconnect</string>
    <string name="B_Clear">Clear</string>
    <string name="B_SendContent">Scan Information</string>
    <string name="B_Send">Send</string>
    <string name="B_SendList">Command List</string>
    <string name="U_ScanContent">Scan Information：</string>
    <!-- USB -->
    <string name="U_Clear">Clear</string>
    <string name="U_SendContent">Send Command</string>
    <string name="U_Send">Send</string>
    <string name="U_SendList">Setting</string>
    <string name="U_ChargeState">Set Charging Mode Threshold</string>
    <string name="U_ChargeMax">Max Value( Default:35)</string>
    <string name="U_ChargeMin">Min Value (Default:30)</string>
    <string name="U_ChargeWarn">Sled Battery Warning( Default: 5)</string>
    <string name="U_StartService">Start Service</string>
    <string name="U_stopService">Stop Service</string>
    <string name="U_newActivity">More</string>
    <string name="U_AutoStartServer">Auto Start</string>
    <string name="U_SelectApp">Select App</string>
    <string name="U_CurrentApp">Current App:</string>
    <string name="U_StartApp">Run App</string>
    <!--TTS-->
    <string name="T_Product">Product</string>
    <string name="T_Barcode">Barcode</string>
    <string name="T_Count">Count</string>
    <string name="T_Clear">clear</string>
    <string name="T_Pronunciation">pronunciation</string>
    <string name="T_Content">Content Setting</string>
    <string name="T_SysSetting">System Setting</string>
    <string name="T_Back">Back</string>
    <string name="T_Ok">OK</string>
    <string name="T_P_Finish">Product?Finish</string>
    <string name="T_B_Finish">Barcode?Finish</string>
    <string name="T_C_finish">Count?Finish</string>
    <string name="T_question_mark">question? Represents the collection content, please use the English question mark</string>
</resources>
